<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="#000"
    tools:context="bilgerat.wizzy.avast.Activities.MapActivity">

    <!--
    LinearLayout (vertical) with:
        LinearLayout (horizontal) with:
            Button for view all viruses
            Button for view my virus
        ImageView:
            src should be set programmatically
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:textColor="#FFF"
        android:textSize="@dimen/title_font_size"
        android:text="@string/map_title"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/map_self_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/map_my__button"/>

        <Button
            android:id="@+id/map_all_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/map_all_button"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>
