<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:virus="http://schema.android.com/apk/res/bilgerat.wizzy.avast"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="bilgerat.wizzy.avast.Activities.DesignAppearanceActivity">

    <!--
    RelativeLayout with:
        ImageView shapes
        ImageView colors
        Gone LinearLayout (horizontal) shapes menu
            Vertical
            ImageViews for each shape
        Gone LinearLayout colors menu
            Vertical
            Sliders for R,G,B
        Whatever view is necessary to display viruses
            Most likely a bunch of ImageViews
        "Done" button
    -->


    <!--
    This is a test of the custom VirusView attribute
    -->

    <bilgerat.wizzy.avast.Support.VirusView
        android:id="@+id/design_virus_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        virus:bodyColor="#000"
        virus:color1="#00F"
        virus:color2="#0F0"
        virus:color3="#F00"
        virus:color4="#0FF"
        virus:color5="#FF0"
        virus:color6="#FFF"
        virus:color7="#000"
        virus:color8="#00F"
        virus:color9="#0F0"
        virus:color10="#F00"
        virus:color11="#0FF"
        virus:color12="#FF0"
        virus:shape1="circle"
        virus:shape2="square"
        virus:shape3="triangle"
        virus:shape4="fork"
        virus:shape5="gone"
        virus:shape6="gone"
        virus:shape7="circle"
        virus:shape8="square"
        virus:shape9="triangle"
        virus:shape10="fork"
        virus:shape11="gone"
        virus:shape12="gone"
        />


    <!-- Contains empty weighted view to take up first 3/4 of page,
    followed by rgb sliders at the bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

        </View>

        <Button
            android:id="@+id/design_slider_button"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:text="@string/design_toggle_sliders_button"/>

        <Button
            android:id="@+id/design_geometry_button"
            android:layout_width="@dimen/home_button_width"
            android:layout_height="@dimen/home_button_height"
            android:text="@string/design_add_geometry_button"/>

        <LinearLayout
            android:id="@+id/design_color_slider_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:textColor="#000"
                android:text="@string/design_red_label"/>

            <SeekBar
                android:id="@+id/design_red_slider"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:textColor="#000"
                android:text="@string/design_green_label"/>

            <SeekBar
                android:id="@+id/design_green_slider"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:textColor="#000"
                android:text="@string/design_blue_label"/>

            <SeekBar
                android:id="@+id/design_blue_slider"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp" />

        </LinearLayout>


    </LinearLayout>




</RelativeLayout>
